--- a/views/SD/start.html
+++ b/views/SD/start.html
@@ -51,8 +51,8 @@
           <br>
           <br>
             <div class = "center">
-              <a style = "background: #3ece4b;" class="waves-effect waves-light btn-large" onclick = "SD(true)">SD</a>
-              <a style = "background: #f53135;" class="waves-effect waves-light btn-large" onclick = "SD(false)">Non-SD</a>
+              <a style = "background: #3ece4b;" class="waves-effect waves-light btn-large" onclick = "shouldStrategy(true)">SD</a>
+              <a style = "background: #f53135;" class="waves-effect waves-light btn-large" onclick = "shouldStrategy(false)">Non-SD</a>
             </div>
             <div class = "col s12">
               <br>
